--- a/css/xaringan-themer.css
+++ b/css/xaringan-themer.css
@@ -18,49 +18,49 @@
  *  Version: 0.4.1
  *
  * ------------------------------------------------------- */
-@import url(https://fonts.googleapis.com/css?family=Noto+Sans:400,400i,700,700i&display=swap);
-@import url(https://fonts.googleapis.com/css?family=Cabin:600,600i&display=swap);
+@import url(https://fonts.googleapis.com/css?family=Quicksand:400&display=swap);
+@import url(https://fonts.googleapis.com/css?family=Forum:400&display=swap);
 @import url(https://fonts.googleapis.com/css?family=Source+Code+Pro:400,700&display=swap);
 
 
 :root {
   /* Fonts */
-  --text-font-family: 'Noto Sans';
+  --text-font-family: Quicksand;
   --text-font-is-google: 1;
   --text-font-family-fallback: -apple-system, BlinkMacSystemFont, avenir next, avenir, helvetica neue, helvetica, Ubuntu, roboto, noto, segoe ui, arial;
   --text-font-base: sans-serif;
-  --header-font-family: Cabin;
+  --header-font-family: Forum;
   --header-font-is-google: 1;
   --header-font-family-fallback: Georgia, serif;
   --code-font-family: 'Source Code Pro';
   --code-font-is-google: 1;
   --base-font-size: 20px;
-  --text-font-size: 1rem;
+  --text-font-size: 28pt;
   --code-font-size: 0.9rem;
   --code-inline-font-size: 1em;
-  --header-h1-font-size: 2.75rem;
-  --header-h2-font-size: 2.25rem;
-  --header-h3-font-size: 1.75rem;
+  --header-h1-font-size: 70pt;
+  --header-h2-font-size: 50pt;
+  --header-h3-font-size: 40pt;
 
   /* Colors */
-  --text-color: #000000;
-  --header-color: #1381B0;
-  --background-color: #FFFFFF;
-  --link-color: #1381B0;
-  --text-bold-color: #1381B0;
+  --text-color: #0D0D0D;
+  --header-color: #A65746;
+  --background-color: #FEFDFB;
+  --link-color: #A4A08E;
+  --text-bold-color: #A65746;
   --code-highlight-color: rgba(255,255,0,0.5);
-  --inverse-text-color: #000000;
-  --inverse-background-color: #FF961C;
+  --inverse-text-color: #FEFDFB;
+  --inverse-background-color: #BF895A;
   --inverse-header-color: #FFFFFF;
-  --inverse-link-color: #1381B0;
-  --title-slide-background-color: #1381B0;
-  --title-slide-text-color: #000000;
-  --header-background-color: #1381B0;
-  --header-background-text-color: #FFFFFF;
-  --primary: #1381B0;
-  --secondary: #FF961C;
-  --white: #FFFFFF;
-  --black: #000000;
+  --inverse-link-color: #A4A08E;
+  --title-slide-background-color: #A65746;
+  --title-slide-text-color: #FEFDFB;
+  --header-background-color: #A65746;
+  --header-background-text-color: #FEFDFB;
+  --primary: #A65746;
+  --secondary: #BF895A;
+  --white: #FEFDFB;
+  --black: #0D0D0D;
 }
 
 html {
@@ -69,17 +69,17 @@ html {
 
 body {
   font-family: var(--text-font-family), var(--text-font-family-fallback), var(--text-font-base);
-  font-weight: normal;
+  font-weight: 400;
   color: var(--text-color);
 }
 h1, h2, h3 {
   font-family: var(--header-font-family), var(--header-font-family-fallback);
-  font-weight: 600;
+  font-weight: 400;
   color: var(--header-color);
 }
 .remark-slide-content {
   background-color: var(--background-color);
-  font-size: 1rem;
+  font-size: 28pt;
   padding: 16px 64px 16px 64px;
   width: 100%;
   height: 100%;
@@ -101,10 +101,10 @@ h1, h2, h3 {
 }
 .remark-inline-code {
   font-size: var(--code-inline-font-size);
-  color: #1381B0;
+  color: #A65746;
 }
 .remark-slide-number {
-  color: #1381B0;
+  color: #5A6E73;
   opacity: 1;
   font-size: 0.9rem;
 }
@@ -114,10 +114,11 @@ strong {
 }
 a, a > code {
   color: var(--link-color);
-  text-decoration: none;
+  text-decoration: underline;
 }
 .footnote {
   position: absolute;
+  color: #5A6E73;
   bottom: 60px;
   padding-right: 4em;
   font-size: 0.9em;
@@ -152,10 +153,10 @@ a, a > code {
   float: left;
 }
 .left-column h2, .left-column h3 {
-  color: #1381B099;
+  color: #A6574699;
 }
 .left-column h2:last-of-type, .left-column h3:last-child {
-  color: #1381B0;
+  color: #A65746;
 }
 .right-column {
   width: 75%;
@@ -177,7 +178,7 @@ img, video, iframe {
   max-width: 100%;
 }
 blockquote {
-  border-left: solid 5px #FF961C80;
+  border-left: solid 5px #BF895A80;
   padding-left: 1em;
 }
 .remark-slide table {
@@ -192,7 +193,7 @@ th, td {
   padding: 5px;
 }
 .remark-slide thead, .remark-slide tfoot, .remark-slide tr:nth-child(even) {
-  background: #FFEAD1;
+  background: #F2E7DE;
 }
 table.dataTable tbody {
   background-color: var(--background-color);
@@ -202,7 +203,7 @@ table.dataTable.display tbody tr.odd {
   background-color: var(--background-color);
 }
 table.dataTable.display tbody tr.even {
-  background-color: #FFEAD1;
+  background-color: #F2E7DE;
 }
 table.dataTable.hover tbody tr:hover, table.dataTable.display tbody tr:hover {
   background-color: rgba(255, 255, 255, 0.5);
@@ -297,3 +298,15 @@ table.dataTable.hover tbody tr:hover, table.dataTable.display tbody tr:hover {
   background-color: var(--black);
 }
 
+
+
+/* Extra CSS */
+.subtitle h2 {
+  font-size: 34pt;
+  font-family: var(--text-font-family);
+  font-weight: 300;
+}
+.date h3, .author h3 {
+  font-size: 32pt;
+  margin: 0;
+}
