alter link color

--- a/css/xaringan-themer.css
+++ b/css/xaringan-themer.css
@@ -46,13 +46,13 @@
   --text-color: #0D0D0D;
   --header-color: #A65746;
   --background-color: #FEFDFB;
-  --link-color: #A4A08E;
+  --link-color: #8E8A76;
   --text-bold-color: #A65746;
   --code-highlight-color: rgba(255,255,0,0.5);
   --inverse-text-color: #FEFDFB;
   --inverse-background-color: #BF895A;
   --inverse-header-color: #FFFFFF;
-  --inverse-link-color: #A4A08E;
+  --inverse-link-color: #8E8A76;
   --title-slide-background-color: #A65746;
   --title-slide-text-color: #FEFDFB;
   --header-background-color: #A65746;
